src/styles/modules/icon-grid.less
.icon-grid {
    width: 100%;

    .icon-grid-column {
        width: 50%;
        float: left;

        @media screen and (min-width: 500px) and (max-width: @screen-sm-max) { // Phone Landscape/Tablet
            width: 25%;
        }
    }

    .icon-grid-item {
        background: #efefef;
        margin: 1px;
        padding: 10px;
        height: 95px;
        cursor: pointer;
        text-align: center;

        .title {
            clear: both;
            display: block;
            font-size: 13px;
            @media screen and (min-width: @screen-md-max) { // Large desktop
                font-size: 14px;
            }
        }
        .icon {
            margin: 8px auto 0px auto;
        }

        &:hover {
            background: #dfdfdf;
            @media screen and (max-width: @screen-sm-max) { // Tablet/Phone
                background: #00CC99;
                .title {
                    color: #fff;
                }
            }
        }
        @media screen and (min-width: @screen-sm-max) { // Desktop
            &.is-active {
                background: #00CC99;
                .title {
                    color: #fff;
                }
            }
        }
    }

    &.icon-grid-single-row {
        .icon-grid-column {
            width: 100%;
        }
        .icon-grid-item {
            float: left;
            height: auto;
        }
    }
}

